# field-ops-ai

./: .gitignore  CLAUDE.md  project.md  tasks.md
api/: .env.example  .gitignore  =9.0.0  README.md  alembic.ini  pyproject.toml
api/alembic/: env.py
api/alembic/versions/: 001_add_quota_notifications_table.py  002_add_admin_tables.py
api/app/: __init__.py  config.py  main.py
api/app/api/: __init__.py
api/app/api/v1/: router.py
api/app/api/v1/endpoints/: __init__.py  auth.py  documents.py  phone_numbers.py  quota.py  settings.py
api/app/api/v1/endpoints/admin/: __init__.py  auth.py  config.py  dashboard.py  health.py  notifications.py  users.py
api/app/api/v1/schemas/: __init__.py  auth.py  document.py  phone_number.py  quota.py
api/app/api/v1/schemas/admin/: __init__.py  auth.py  config.py  dashboard.py  health.py  notifications.py  users.py
api/app/api/webhooks/: __init__.py  twilio.py
api/app/core/: __init__.py  auth.py  exceptions.py  security.py
api/app/db/: __init__.py  base.py  session.py
api/app/models/: __init__.py  activity.py  admin.py  admin_notification.py  conversation.py  document.py  enums.py  impersonation_session.py  message.py  organization.py  phone_number.py  quota_notification.py  system_settings.py  tier_config.py
api/app/prompts/: __init__.py  rag_system.py
api/app/services/: __init__.py  agent.py  conversation.py  data_export.py  document_processor.py  embedding.py  llm.py  quota.py  sms.py  sms_handler.py  storage.py  supabase_client.py  vector_store.py  welcome.py
api/app/services/admin/: __init__.py  auth_service.py  health_service.py  kpi_service.py  notification_service.py  user_service.py
api/app/services/extractors/: __init__.py  base.py  docx_extractor.py  pdf_extractor.py  spreadsheet_extractor.py  text_extractor.py
api/app/services/tools/: __init__.py  get_document_section.py  grep_documents.py  keyword_search.py  semantic_search.py
api/app/tasks/: __init__.py  quota_reset.py
api/app/utils/: __init__.py  language.py
api/scripts/: init_db.py  init_qdrant.py
api/tests/: __init__.py
web/: .env.local  .env.local.example  README.md  middleware.ts  package-lock.json  package.json  tailwind.config.ts  tsconfig.tsbuildinfo
web/app/: globals.css  layout.tsx  page.tsx
web/app/(auth)/: layout.tsx
web/app/(auth)/login/: page.tsx
web/app/(auth)/signup/: page.tsx
web/app/(dashboard)/: layout.tsx  page.tsx
web/app/(dashboard)/activity/: page.tsx
web/app/(dashboard)/analytics/: page.tsx
web/app/(dashboard)/billing/: page.tsx
web/app/(dashboard)/dashboard/: page.tsx
web/app/(dashboard)/documents/: page.tsx
web/app/(dashboard)/settings/: page.tsx
web/app/(dashboard)/simulator/: page.tsx
web/app/(marketing)/: layout.tsx  page.tsx
web/app/(marketing)/privacy/: page.tsx
web/app/(marketing)/terms/: page.tsx
web/app/admin/: layout.tsx
web/app/admin/config/: page.tsx
web/app/admin/dashboard/: page.tsx
web/app/admin/health/: page.tsx
web/app/admin/login/: page.tsx
web/app/admin/notifications/: page.tsx
web/app/admin/users/: page.tsx
web/app/admin/users/[id]/: page.tsx
web/app/auth/callback/: route.ts
web/components/features/: LoginForm.tsx  SignupForm.tsx
web/components/features/admin/: AdminHeader.tsx  AdminSidebar.tsx  BusinessKPIs.tsx  DeleteUserDialog.tsx  EditUserDialog.tsx  ImpersonateButton.tsx  KPICard.tsx  LogViewer.tsx  NotificationBell.tsx  NotificationList.tsx  ServiceStatusCard.tsx  TechnicalKPIs.tsx  TierConfigTable.tsx  TierEditDialog.tsx  UserDetails.tsx  UserTable.tsx  index.ts
web/components/features/billing/: BillingHistoryCard.tsx  CurrentPlanCard.tsx  PaymentMethodCard.tsx  PlansComparison.tsx  index.ts
web/components/features/changelog/: ChangelogModal.tsx  ChangelogProvider.tsx  index.ts
web/components/features/documents/: DeleteConfirmDialog.tsx  DocumentCard.tsx  DocumentList.tsx  DocumentUploader.tsx  DuplicateDialog.tsx  index.ts
web/components/features/settings/: DangerZone.tsx  PasswordSection.tsx  PhoneNumbersSection.tsx  ProfileSection.tsx  index.ts
web/components/landing/: CTASection.tsx  FAQSection.tsx  HeroSection.tsx  HowItWorksSection.tsx  PricingSection.tsx  index.ts
web/components/providers/: AuthProvider.tsx
web/components/ui/: button.tsx  card.tsx  dialog.tsx  dropdown-menu.tsx  input.tsx  label.tsx  progress.tsx  separator.tsx  toast.tsx
web/data/: changelog.json
web/hooks/: useAdminAuth.ts  useDocuments.ts  useSession.ts  useUser.ts
web/lib/: utils.ts
web/lib/api/: admin-client.ts  client.ts
web/lib/auth/: actions.ts  client.ts  context.tsx  index.ts
web/lib/supabase/: middleware.ts
